--- a/templates/service-delete.html
+++ b/templates/service-delete.html
@@ -1,27 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Service create</title>
-</head>
-<body>
+{% include "_header.html" %}
 
-<h2><a href="/"><- В начало</a></h2>
+<body>
+{% include "_back.html" %}
 
 <section>
   <h3>Введите данные сервиса:</h3>
 
-  <section>
+  <form>
     <div>
       <label for="input-token">Токен доступа:</label>
       <input type="text" id="input-token">
     </div>
-  </section>
+  </form>
 
   <button onclick="send()">Отправить</button>
 
   <section id="output" style="display: none">
-    <div style="color: green">Сервис и вся его статистика успешно удалены, если существовали</div>
+    <img src="{{ url_for('static', filename='images/done.svg') }}" alt="done">
+    <div style="color: lightgreen">Сервис и вся его статистика успешно удалены, если существовали</div>
   </section>
 </section>
 
